fix `.small-labels .label .link` visibility

--- a/assets/stylesheets/labels.scss
+++ b/assets/stylesheets/labels.scss
@@ -14,7 +14,7 @@
 }
 
 .small-labels .label .link {
-    color: #a8d2ff;
+    color: #0063cc;
 }
 
 .small-labels .group, .small-labels .label {
